tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all module, type, fn and constant defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.const_decl)),

        // then the expressions to evaluate, in order
        repeat($.expression),
      ),

    fn_decl: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        field("name", $.fn_identifier),
        optional(field("type_params", $.type_params)),
        field("params", $.fn_decl_params),
        field("symbol_colon", alias(":", $.symbol)),
        field("return_type", $.type_reference),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq($.indent, field("body", $.expression), $.dedent),
          field("body", $.expression),
        ),
      ),
    fn_decl_params: $ => repeat1(choice($.unit, $.fn_decl_param)),
    simple_expression: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.qualified_const_name,
        // $.qualified_fn_name,
        $.record_update,
      ),

    expression: $ =>
      choice(
        $.paren_expression,
        $.simple_expression,
        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.infix_operation,
        $.apply,

        $.lambda_expression,
        $.pipe_expression,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Strings
    // TODO: maybe add support for multiline strings (""")
    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // Characters
    char_literal: $ =>
      seq(
        field("symbol_open_single_quote", alias("'", $.symbol)),
        field("content", $.character),
        field("symbol_close_single_quote", alias("'", $.symbol)),
      ),
    character: $ =>
      choice(
        // higher precedence than escape sequences
        token.immediate(prec(1, /[^'\\\n]/)),
        $.char_or_string_escape_sequence,
      ),

    char_or_string_escape_sequence: _ =>
      token.immediate(seq("\\", /(\"|\\|\/|b|f|n|r|t|u)/)),

    //
    // Infix operations
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.expression),
          ),
        ),
      ),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.
    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    //
    // Floats
    float_literal: $ => /[+-]?[0-9]+\.[0-9]+/,

    //
    // List
    // TODO: allow multi-line lists where a newline is 'interpreted' as a list delimiter (i.e. no ; needed)
    dict_literal: $ => dict_literal_base($, $.dict_content),
    dict_content: $ => dict_content_base($, $.dict_pair),
    dict_pair: $ => dict_pair_base($, $.expression),

    //
    // Tuples
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    lambda_expression: $ =>
      seq(
        field("keyword_fun", alias("fun", $.keyword)),
        field("pats", $.lambda_pats),
        field("symbol_arrow", alias("->", $.symbol)),
        field("body", $.expression),
      ),
    lambda_pats: $ => field("pat", repeat1($.let_pattern)),

    lp_tuple: $ => tuple_literal_base($, $.let_pattern, $.let_pattern_the_rest),
    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Match expression
    // TODO : allow one-line match expressions (i.e. match x with | 1 -> ...)
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            field(
              "args",
              repeat1(choice($.paren_expression, $.simple_expression)),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
          // the new line is used as a delimiter
          optional($.newline),
        ),
      ),

    //
    // Let expression
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    pipe_fn_call: $ =>
      prec.right(
        seq(
          field("fn", $.qualified_fn_name),
          field(
            "args",
            repeat(choice($.paren_expression, $.simple_expression)),
          ),
        ),
      ),

    //
    // Pipe enum
    pipe_expr: $ =>
      choice($.pipe_lambda, $.pipe_infix, $.pipe_fn_call, $.pipe_enum),

    pipe_exprs: $ =>
      prec.left(
        seq(
          field("symbol_pipe", alias("|>", $.symbol)),
          field("pipe_expr", $.pipe_expr),
        ),
      ),

    pipe_expression: $ =>
      prec.left(
        PREC.PIPE_EXPR,
        seq(
          field("expr", $.expression),
          repeat1(field("pipe_exprs", $.pipe_exprs)),
        ),
      ),

    // ---------------------
    // Common
    // ---------------------
    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        $.list_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `double` in `let double (x: Int) = x + x`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `Person` in `type MyPerson = ...`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    //
    newline: $ => /\n/,

    unit: $ => "()",
    double_backtick_identifier: $ => token(seq("``", /[^`]+/, "``")),
  },
});

function list_literal_base($, contentRule) {
  return seq(
    field("symbol_open_bracket", alias("[", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_bracket", alias("]", $.symbol)),
  );
}
function list_content_base($, content) {
  return choice(
    seq(
      content,
      repeat(seq(field("list_separator", alias(";", $.symbol)), content)),
      optional(alias(";", $.symbol)),
    ),
    seq(content, repeat(seq($.newline, content)), optional($.newline)),
  );
}

function tuple_literal_base($, firstOrSecond, rest) {
  return seq(
    field("symbol_left_paren", alias("(", $.symbol)),
    field("first", firstOrSecond),
    field("symbol_comma", alias(",", $.symbol)),
    field("second", firstOrSecond),
    optional(field("rest", rest)),
    field("symbol_right_paren", alias(")", $.symbol)),
  );
}
function tuple_literal_the_rest_base($, rest) {
  return repeat1(
    seq(field("symbol_comma", alias(",", $.symbol)), field("expr", rest)),
  );
}

function dict_literal_base($, contentRule) {
  return seq(
    field("keyword_dict", alias("Dict", $.keyword)),
    field("symbol_open_brace", alias("{", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_brace", alias("}", $.symbol)),
  );
}
function dict_content_base($, dict_pair) {
  return choice(
    seq(
      dict_pair,
      repeat(seq(field("dict_separator", alias(";", $.symbol)), dict_pair)),
    ),
    seq(dict_pair, repeat(seq($.newline, dict_pair)), optional($.newline)),
  );
}
function dict_pair_base($, value) {
  return seq(
    // CLEANUP this should allow for any string (i.e. `This`), without any backticks. may require alternative syntax.
    field("key", choice($.variable_identifier, $.double_backtick_identifier)),
    field("symbol_equals", alias("=", $.symbol)),
    field("value", value),
  );
}

function enum_literal_base($, enum_fields) {
  return prec.right(
    seq(
      field("type_name", $.qualified_type_name),
      field("symbol_dot", alias(".", $.symbol)),
      field("case_name", $.enum_case_identifier),
      optional(
        choice(
          seq($.indent, field("enum_fields", enum_fields), $.dedent),
          // field("enum_fields", enum_fields),
          field("enum_fields", seq(enum_fields, optional(/\n/))),
        ),
      ),
    ),
  );
}
function enum_fields_base($, fields) {
  return prec(
    1, // this is for conflict between `paren_expression` and `enum_fields`
    choice(
      seq(
        field("symbol_open_paren", alias("(", $.symbol)),
        seq(
          fields,
          repeat(
            prec.right(
              seq(field("symbol_comma", alias(",", $.symbol)), fields),
            ),
          ),
        ),
        field("symbol_close_paren", alias(")", $.symbol)),
      ),
      prec.right(repeat1(fields)),
    ),
  );
}
