tree-sitter-darklang/test/corpus/exhaustive/exprs/floats.txt
==================
float literal
==================

1.0

---

(source_file (expression (simple_expression (float_literal))))


==================
float literal (negative)
==================

-1.0

---
(source_file (expression (simple_expression (float_literal))))


==================
float literal (zero)
==================

-00000000.000

---
(source_file (expression (simple_expression (float_literal))))


==================
infinity
==================

Infinity

---

(source_file
  (expression
    (simple_expression
      (float_literal
        (infinity)))))


==================
infinity (negative)
==================

-Infinity

---

(source_file
  (expression
    (simple_expression
      (float_literal
        (negative_infinity)))))